--- a/blocks/page.css
+++ b/blocks/page.css
@@ -11,7 +11,7 @@
     margin: 0 auto;
 }
 
-.page_content {
+.page__content {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -19,7 +19,7 @@
 }
 
 @media screen and (max-width: 768px){
-    .page_content {
+    .page__content {
         padding-left: 20px;
         padding-right: 20px;
     }
