--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,4 +1,13 @@
+.cards__list {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  list-style: none;
+  padding: 0 200px;
+  margin: 0;
+}
+
 .cards {
-    /*fonts*/
-    margin-top: 30px;
+  margin-top: 30px;
 }
