--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,7 +2,7 @@
     content: '';
     width: 100%;
     height: 1px;
-    opacity: .7;
+    opacity: 0.7;
     background: #545454;
     position: absolute;
     left: 50%;
@@ -14,4 +14,21 @@
     margin-top: 45px;
     height: 74px;
 }
+
+@media screen and (max-width: 320px){
+    .header::before {
+        width: 320px;
+    }
+    
+    .header {
+        margin-top: 28px;
+        height: 56px;
+    }
+    
+    .header__logo {
+        height: 24px;
+        width: 126px;   
+    }
+}
+
 
