--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
   list-style: none;
-  padding: 0 200px;
+  padding: 0;
   margin: 0;
 }
 
