--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -3,6 +3,7 @@
 }
 
 .footer__copyright {
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
