--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -42,6 +42,7 @@
 }
 
 .profile__title {
+  font-family: "Inter", Arial, sans-serif;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
@@ -53,6 +54,7 @@
 }
 
 .profile__description {
+  font-family: "Inter", Arial, sans-serif;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
