add js function to modal form and cards

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -8,10 +8,12 @@
   z-index: 999;
   display: flex;
   padding: 0 19px;
+  visibility: hidden;
 }
 
 .modal__opened {
   display: flex;
+  visibility: visible;
 }
 
 .modal__container {
