--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   border-radius: 10px;
   list-style: none;
+  position: relative;
 }
 
 .card__title {
@@ -30,6 +31,25 @@
   align-items: center;
   justify-content: space-between;
   border-radius: 0px 0px 10px 10px;
+}
+
+.card__delete-button {
+  background: transparent url(../images/Trash\ Button.svg) center no-repeat;
+  width: 18px;
+  min-width: 18px;
+  height: 19.3px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 18px;
+  right: 15px;
+}
+
+.card__delete-button:hover {
+  background: url(../images/Trash\ Button\ Hover.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .card__like-button {
