--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,4 +1,5 @@
 .modal {
+  display: flex;
   position: fixed;
   top: 0;
   left: 0;
@@ -9,13 +10,12 @@
   display: flex;
   padding: 0 19px;
   visibility: hidden;
-  transition: visibility 0s linear 0.3s, opacity 0.6s;
+  transition: visibility 0s linear, opacity 0.6s;
   pointer-events: none;
   opacity: 0;
 }
 
 .modal_opened {
-  display: flex;
   visibility: visible;
   transition-delay: 0.3s;
   pointer-events: all;
@@ -108,8 +108,10 @@
 }
 
 .modal__button {
-  background: transparent url(../images/Submit\ Button.svg) center no-repeat;
-  width: 358px;
+  background: transparent url(../images/Blank\ Black\ Button.svg) center
+    no-repeat;
+  color: #fff;
+  width: 100%;
   height: 50px;
   margin-top: 48px;
   margin-left: auto;
@@ -143,7 +145,6 @@
     max-width: 238px;
   }
   .modal__button {
-    width: 238px;
     height: 46px;
     margin-top: 45px;
   }
