--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -8,17 +8,17 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   padding: 0 19px;
-  visibility: hidden;
-  transition: visibility 0s linear, opacity 0.6s;
+  visibility: none;
   pointer-events: none;
   opacity: 0;
+  transition: visibility 0s 0.6s, opacity 0.6s linear;
 }
 
 .modal_opened {
   visibility: visible;
-  transition-delay: 0.3s;
   pointer-events: all;
   opacity: 1;
+  transition: visibility 0s, opacity 0.6s linear;
 }
 
 .modal__container {
@@ -64,6 +64,10 @@
   position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
+}
+
+.modal__close:hover {
+  opacity: 0.5;
 }
 
 .modal__form {
@@ -119,6 +123,10 @@
   cursor: pointer;
 }
 
+.modal__button:hover {
+  opacity: 0.5;
+}
+
 @media screen and (max-width: 755px) {
   .modal__close {
     width: 26px;
@@ -132,7 +140,7 @@
     padding: 25px 22px;
   }
   .modal__heading {
-    font-family: "Inter";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 18px;
