--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -91,6 +91,27 @@
   color: #a9a9a9;
 }
 
+.modal__error {
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  opacity: 0;
+  position: relative;
+  top: calc(100% + 5px);
+  left: 0;
+  transition: opacity 0.3s;
+}
+
+.modal__error_visible {
+  opacity: 1;
+}
+.modal__input_type_error {
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid red;
+}
+
 .modal__image {
   max-width: 100%;
   max-height: 100%;
@@ -125,6 +146,12 @@
 
 .modal__button:hover {
   opacity: 0.5;
+}
+
+.modal__button:disabled {
+  background: transparent url(../images/blank\ submit\ button\ disabled.svg)
+    center no-repeat;
+  color: #a9a9a9;
 }
 
 @media screen and (max-width: 755px) {
