--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -73,12 +73,37 @@
   width: 120px;
   border-radius: 50%;
   object-fit: cover;
-  background-position: center;
-  margin-right: 24px;
+  position: relative;
 }
 
-/* hover effect. edit icon and opacity. z index?
-overlap button on image */
+.profile__image-edit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0;
+  border: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8) url("../images/editavatarbutton.svg") no-repeat
+    center;
+  background-size: 26px;
+  transition: all 0.3s;
+  opacity: 0;
+  outline: none;
+  border-radius: 50%;
+}
+
+.profile__image-edit:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.profile__avatar-container {
+  width: 120px;
+  height: 120px;
+  position: relative;
+  margin-right: 30px;
+}
 
 @media screen and (max-width: 480px) {
   .profile {
